--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>온투업(P2P) 담보대출 "나도 가능할까?"</title>
+  <title>온투업(P2P) 담보대출 계산기</title>
 
   <style>
     :root{
@@ -169,7 +169,7 @@
   </div>
 
   <div class="container">
-    <h1>온투업(P2P) 담보대출 "나도 가능할까?"</h1>
+    <h1>온투업(P2P) 담보대출 계산기</h1>
     <p class="subtitle">
       * 온투업의 실제 대출 데이터를 기반으로 계산됩니다.<br>
       ** 100번을 계산해도 신용점수는 변동되지 않습니다.
@@ -641,3 +641,4 @@
   </script>
 </body>
 </html>
+
