--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 
     /* 종류별 칩: 컨테이너 폭 가득 4등분 */
     .type-chip-wrap{margin-top:8px}
-    .type-chips{
-      display:grid; grid-template-columns:repeat(4,minmax(0,1fr)); gap:8px;
-    }
+    .type-chips{ display:grid; grid-template-columns:repeat(4,minmax(0,1fr)); gap:8px; }
     .type-chip{
       display:flex; justify-content:space-between; align-items:center;
       border:1px solid var(--chip-line); background:var(--chip-bg);
@@ -87,9 +85,17 @@
     .chip .label{font-size:14px;color:#42526e;font-weight:700}
     .chip .label.rate-min{color:#0ea5e9;font-weight:800;letter-spacing:.2px}
     .chip .label.rate-max{color:#ef4444;font-weight:800;letter-spacing:.2px}
-    .chip .val{font-size:18px;font-weight:800;color:#0b2a66} /* 금액 글자 20% 축소 */
+    .chip .val{font-size:18px;font-weight:800;color:#0b2a66}
     .chip-tilde{display:inline-flex;align-items:center;justify-content:center;padding:0 6px;font-size:18px;line-height:1;font-weight:800;color:#6b7a99}
     .chip-tilde.tight{padding:0 4px}
+
+    /* 이자금액 칩만 더 작게 */
+    .chip-row.rate .chip .val{font-size:16px}
+    .chip-row.rate .chip .label{font-size:13px}
+    @media(max-width:460px){
+      .chip-row.rate .chip .val{font-size:15px}
+      .chip-row.rate .chip .label{font-size:12px}
+    }
 
     .icon-dot{width:10px;height:10px;border-radius:50%;display:inline-block;flex:0 0 10px}
     .dot-blue{background:#2b6cb0}.dot-gold{background:#d4af37}.dot-navy{background:#1a365d}.dot-green{background:#2f855a}.dot-slate{background:#6b7a99}
@@ -139,7 +145,6 @@
     .btn-secondary:hover{background:#e9edf3}
     .btn-kakao{background:var(--kakao-yellow);color:var(--kakao-brown);border:1px solid #f4d000;display:inline-flex;align-items:center;justify-content:center;gap:8px;font-weight:800}
     .btn-kakao:hover{background:#fde236}
-
   </style>
 </head>
 <body>
@@ -157,7 +162,7 @@
       </div>
     </div>
 
-    <!-- 종류별 카운트 칩 (컨테이너 폭 가득 4등분) -->
+    <!-- 종류별 카운트 칩 -->
     <div class="type-chip-wrap">
       <div class="type-chips">
         <div class="type-chip"><span class="label">아파트</span><span id="aptCount" class="val">0</span></div>
@@ -235,6 +240,18 @@
           <span id="deduction_view" class="amount-display">0원</span>
         </div>
       </div>
+
+      <!-- ✅ (선택사항) 지분율 -->
+      <div class="step">
+        <label class="steplabel no-badge-before">
+          (선택사항) 지분 대출의 경우 지분율 입력
+        </label>
+        <div class="amount-row">
+          <input type="number" id="sharePercent" inputmode="numeric" min="1" max="100" placeholder="예: 50">
+          <span id="sharePercent_view" class="amount-display">100%</span>
+        </div>
+        <p class="info">지분 대출이면 본인 지분율(1~100%)을 입력하세요. 미입력 시 전체 소유(100%) 기준으로 계산합니다.</p>
+      </div>
     </div>
 
     <button id="calcBtn">대출 가능성 확인하기</button>
@@ -301,20 +318,53 @@
       el.addEventListener('input', ()=> updatePreview(id, viewId));
     }
 
+    // 지분율 파싱/미리보기 (미입력은 100%로 표기)
+    function parseSharePercent(raw){
+      const n = Number(onlyDigits(raw));
+      if (!n) return 0; // 미입력은 실제 계산에선 0(=전체모드)로 처리
+      return Math.min(100, Math.max(1, n));
+    }
+    function updatePercentPreview(id, viewId){
+      const el = document.getElementById(id);
+      const n = parseSharePercent(el.value);
+      el.value = n ? String(n) : ''; // 입력칸은 비워두되
+      const pv = document.getElementById(viewId);
+      pv.textContent = n ? `${n}%` : '100%'; // 미입력 프리뷰는 100%로 표시
+    }
+    function attachPercentWithPreview(id, viewId){
+      const el = document.getElementById(id);
+      updatePercentPreview(id, viewId);
+      el.addEventListener('input', ()=> updatePercentPreview(id, viewId));
+      el.addEventListener('blur', ()=> updatePercentPreview(id, viewId));
+    }
+
     /* 매월 이자 금액 */
     const monthlyPayment = (principal, annualRate) => principal * annualRate / 12;
 
-    /* LTV 판정식 */
-    function computeLtv({region, propertyType, marketValue, seniorLoan, deduction, requestedLoan}){
+    /* LTV 판정식 (지분 모드 지원) */
+    function computeLtv({region, propertyType, marketValue, seniorLoan, deduction, requestedLoan, sharePercent}){
       const ratio = LTV_LIMITS?.[region]?.[propertyType];
       if (!ratio) throw new Error('지역/부동산 종류를 다시 선택해주세요.');
-      const limit = marketValue * ratio;
-      const d = Math.max(0, Math.min(deduction, seniorLoan, requestedLoan));
-      const maxRequested = Math.max(0, limit - seniorLoan + d);
-      const status = (requestedLoan > 0)
-        ? (requestedLoan <= maxRequested ? 'possible' : 'exceeded')
-        : 'no-request';
-      return { ratio, limit, maxRequested, usedDeduction: d, status };
+
+      const isShare = sharePercent && sharePercent >= 1 && sharePercent <= 100;
+      const baseValue = isShare ? (marketValue * (sharePercent/100)) : marketValue;   // 지분 시세 or 전체 시세
+      const limit = baseValue * ratio;
+
+      if (isShare){
+        // (4+5)/지분시세 기준 판정 (공제 미적용)
+        const maxRequested = Math.max(0, limit - seniorLoan);
+        const status = (requestedLoan > 0)
+          ? (seniorLoan > limit ? 'exceeded' : (requestedLoan <= maxRequested ? 'possible' : 'exceeded'))
+          : 'no-request';
+        return { mode:'share', ratio, limitBase: baseValue, limit, maxRequested, usedDeduction: 0, status };
+      } else {
+        const d = Math.max(0, Math.min(deduction, seniorLoan, requestedLoan));
+        const maxRequested = Math.max(0, limit - seniorLoan + d);
+        const status = (requestedLoan > 0)
+          ? (requestedLoan <= maxRequested ? 'possible' : 'exceeded')
+          : 'no-request';
+        return { mode:'normal', ratio, limitBase: baseValue, limit, maxRequested, usedDeduction: d, status };
+      }
     }
 
     /* ── 금일 이용자수(서버 + 1일1회 제한) ───────────────── */
@@ -438,6 +488,38 @@
       }
     };
 
+    /* ── 입력 요약 칩 (선택항목은 값 있을 때만 표시) ───── */
+    function buildInputChips({region, propertyType, marketValue, seniorLoan, requestedLoan, deduction, sharePercent}){
+      const shareUsed = sharePercent && sharePercent >= 1 && sharePercent <= 100;
+      const shareBase = shareUsed ? Math.floor(marketValue * (sharePercent/100)) : null;
+
+      const chips = [
+        `<span class="chip"><span class="label">지역</span><span class="val">${region || '-'}</span></span>`,
+        `<span class="chip"><span class="label">종류</span><span class="val">${propertyType || '-'}</span></span>`,
+        `<span class="chip"><span class="label">시세</span><span class="val">${formatKoreanCurrency(marketValue)}</span></span>`,
+        `<span class="chip"><span class="label">선순위+보증금</span><span class="val">${formatKoreanCurrency(seniorLoan)}</span></span>`,
+        `<span class="chip"><span class="label">요청금액</span><span class="val">${formatKoreanCurrency(requestedLoan)}</span></span>`,
+      ];
+
+      // 선택항목: 값이 있을 때만 추가
+      if (deduction > 0){
+        chips.push(`<span class="chip"><span class="label">상환/반환</span><span class="val">${formatKoreanCurrency(deduction)}</span></span>`);
+      }
+      if (shareUsed){
+        chips.push(`<span class="chip"><span class="label">지분율</span><span class="val">${sharePercent}%</span></span>`);
+        chips.push(`<span class="chip"><span class="label">지분 시세</span><span class="val">${formatKoreanCurrency(shareBase)}</span></span>`);
+      }
+
+      return `
+        <div class="breakdown-card" aria-labelledby="inputsTitle">
+          <div id="inputsTitle" class="card-title">입력 요약</div>
+          <div class="chip-row tight">
+            ${chips.join('')}
+          </div>
+        </div>
+      `;
+    }
+
     /* ── 필수 입력 검증 ────────────────────────── */
     function validateRequired(){
       const missing = [];
@@ -466,6 +548,7 @@
       attachCommaWithPreview('seniorLoan','seniorLoan_view');
       attachCommaWithPreview('requestedLoan','requestedLoan_view');
       attachCommaWithPreview('deduction','deduction_view');
+      attachPercentWithPreview('sharePercent','sharePercent_view');
 
       const btn = document.getElementById('calcBtn');
       if (btn) btn.addEventListener('click', onCalculate);
@@ -510,29 +593,31 @@
       const seniorLoan    = toNumber(document.getElementById('seniorLoan').value);
       const requestedLoan = toNumber(document.getElementById('requestedLoan').value);
       let deduction       = toNumber(document.getElementById('deduction').value);
+      const sharePercent  = parseSharePercent(document.getElementById('sharePercent').value);
 
       if (deduction > requestedLoan) { alert('상환/반환 금액이 "필요한 대출 금액"을 초과할 수 없습니다. 자동조정합니다.'); deduction = requestedLoan; }
       if (deduction > seniorLoan)    { alert('상환/반환 금액이 선순위 잔액을 초과할 수 없습니다. 자동조정합니다.'); deduction = seniorLoan; }
       document.getElementById('deduction').value = deduction.toLocaleString();
       updatePreview('deduction','deduction_view');
 
-      const ratio = LTV_LIMITS?.[region]?.[propertyType];
-      const seniorLimit = marketValue * ratio;
-
       document.getElementById('result').classList.add('hide');
 
       let r;
       try {
-        r = computeLtv({region, propertyType, marketValue, seniorLoan, deduction, requestedLoan});
+        r = computeLtv({region, propertyType, marketValue, seniorLoan, deduction, requestedLoan, sharePercent});
       } catch (e) {
-        modal.open(`<div class="notice error"><p>${e.message}</p></div>`, {type:'error', text:'오류'});
+        const inputs = buildInputChips({region, propertyType, marketValue, seniorLoan, requestedLoan, deduction, sharePercent});
+        modal.open(`${inputs}<div class="notice error"><p>${e.message}</p></div>`, {type:'error', text:'오류'});
         return;
       }
 
+      const inputs = buildInputChips({region, propertyType, marketValue, seniorLoan, requestedLoan, deduction, sharePercent});
+
       // 선순위만으로 LTV 초과
-      if (seniorLoan > seniorLimit) {
+      if (seniorLoan > r.limit) {
         const kpis = kpisForDenied(requestedLoan, r.maxRequested);
         modal.open(`
+          ${inputs}
           ${kpis}
           <div class="notice error">
             <p><strong>요청하신 금액으로는 대출이 어렵습니다.</strong></p>
@@ -548,6 +633,7 @@
       if (r.status === 'exceeded') {
         const kpis = kpisForDenied(requestedLoan, r.maxRequested);
         modal.open(`
+          ${inputs}
           ${kpis}
           <div class="notice error">
             <p><strong>요청하신 금액으로는 대출이 어렵습니다.</strong></p>
@@ -562,6 +648,7 @@
       // 요청 없음
       if (r.status === 'no-request') {
         modal.open(`
+          ${inputs}
           <div class="notice info">
             <p><strong>요청 금액</strong>을 입력하면 가능 여부를 알려드립니다.</p>
             <p class="disclaimer">※ 실제 온투업체 심사 결과와 다를 수 있습니다.</p>
@@ -584,7 +671,7 @@
 
           <div class="card-section">
             <div class="section-title"><span class="icon-dot dot-blue"></span>매월 이자 금액</div>
-            <div class="chip-row tight">
+            <div class="chip-row tight rate">
               <span class="chip plain"><span class="label rate-min">6.8%</span><span class="val">${formatKoreanCurrency(mMin)}</span></span>
               <span class="chip-tilde tight">~</span>
               <span class="chip plain"><span class="label rate-max">14.8%</span><span class="val">${formatKoreanCurrency(mMax)}</span></span>
@@ -626,6 +713,7 @@
       `;
 
       const html = `
+        ${inputs}
         ${kpis}
         <div class="notice success">
           <p><strong>요청하신 금액으로 대출이 가능합니다.</strong></p>
@@ -641,4 +729,3 @@
   </script>
 </body>
 </html>
-
